# Selene

./: .gitignore  CMakeLists.txt  CREDITS.txt  Notification.h  README.md  Selene.desktop  bridgemanagerdialog.cpp  bridgemanagerdialog.h  chatmanager.cpp  chatmanager.h  chatmessage.cpp  chatmessage.h  chatsession.cpp  chatsession.h  constants.cpp  constants.h  contact.h  contactcardwidget.cpp  contactcardwidget.h  contactlistwidget.cpp  contactlistwidget.h  contactmanager.cpp  contactmanager.h  crypto.cpp  crypto.h  emojipickerwidget.cpp  emojipickerwidget.h  helpmenudialog.cpp  helpmenudialog.h  httpclientdialog.cpp  httpclientdialog.h  io.github.alamahant.Selene-local.yml  io.github.alamahant.Selene.desktop  io.github.alamahant.Selene.metainfo.xml  io.github.alamahant.Selene.yml  logger.cpp  logger.h  logviewerdialog.cpp  logviewerdialog.h  main.cpp  (+17 more)
